Bug 1311175 - Remove inline keyword from mpi.c functions as they are used outside this file