security/nss/lib/freebl/mpi/mpi.c
@@ -19,10 +19,6 @@
 #undef MP_ASSEMBLY_SQUARE
 #endif
 
-#if defined(_MSC_VER) && _MSC_VER < 1900
-#define inline __inline
-#endif
-
 #if MP_LOGTAB
 /*
   A table of the logs of 2 for various bases (the 0 and 1 entries of
@@ -2778,7 +2774,7 @@ mp_err   s_mp_pad(mp_int *mp, mp_size min)
 /* {{{ s_mp_setz(dp, count) */
 
 /* Set 'count' digits pointed to by dp to be zeroes                       */
-inline void s_mp_setz(mp_digit *dp, mp_size count)
+void s_mp_setz(mp_digit *dp, mp_size count)
 {
 #if MP_MEMSET == 0
   int  ix;
@@ -2796,7 +2792,7 @@ inline void s_mp_setz(mp_digit *dp, mp_size count)
 /* {{{ s_mp_copy(sp, dp, count) */
 
 /* Copy 'count' digits from sp to dp                                      */
-inline void s_mp_copy(const mp_digit *sp, mp_digit *dp, mp_size count)
+void s_mp_copy(const mp_digit *sp, mp_digit *dp, mp_size count)
 {
 #if MP_MEMCPY == 0
   int  ix;
@@ -2813,7 +2809,7 @@ inline void s_mp_copy(const mp_digit *sp, mp_digit *dp, mp_size count)
 /* {{{ s_mp_alloc(nb, ni) */
 
 /* Allocate ni records of nb bytes each, and return a pointer to that     */
-inline void *s_mp_alloc(size_t nb, size_t ni)
+void *s_mp_alloc(size_t nb, size_t ni)
 {
   return calloc(nb, ni);
 
@@ -2824,7 +2820,7 @@ inline void *s_mp_alloc(size_t nb, size_t ni)
 /* {{{ s_mp_free(ptr) */
 
 /* Free the memory pointed to by ptr                                      */
-inline void s_mp_free(void *ptr)
+void s_mp_free(void *ptr)
 {
   if(ptr) {
     free(ptr);
@@ -2836,7 +2832,7 @@ inline void s_mp_free(void *ptr)
 /* {{{ s_mp_clamp(mp) */
 
 /* Remove leading zeroes from the given value                             */
-inline void s_mp_clamp(mp_int *mp)
+void s_mp_clamp(mp_int *mp)
 {
   mp_size used = MP_USED(mp);
   while (used > 1 && DIGIT(mp, used - 1) == 0)
